# coalition-builder

./: .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  DEVELOPMENT.md  Dockerfile  Dockerfile.nginx  Dockerfile.ssr  MIGRATION_PLAN_SSR_ONLY.md  README.md  codecov.yml  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.yml  fix_imports.py  init-db.sh  mkdocs.yml  nginx.dev.conf  nginx.protected.conf  update_imports.sh
backend/: .env.example  Dockerfile  README.md  entrypoint.sh  handler.py  healthcheck.py  manage.py  mypy_errors.txt  pyproject.toml  zappa_settings.json  zappa_settings.json.example  zappa_settings.json.template
backend/coalition/: test_base.py
backend/coalition/api/: address.py  api.py  campaigns.py  content_blocks.py  endorsements.py  homepage.py  legal.py  legislators.py  schemas.py  stakeholders.py  tests.py  themes.py
backend/coalition/api/tests/: test_address.py  test_campaigns.py  test_content_blocks.py  test_csrf_token.py  test_endorsement_approval_workflow.py  test_endorsements.py  test_endorsements_display.py  test_etag_cache_control.py  test_etag_configuration.py  test_etag_middleware.py  test_health.py  test_homepage.py  test_legal.py  test_org_authorization.py  test_schemas.py  test_themes.py  test_themes_api.py
backend/coalition/campaigns/: admin.py  constants.py  models.py  tests.py
backend/coalition/campaigns/migrations/: 0001_initial.py  0002_add_endorsement_fields.py  0002_alter_bill_options_alter_bill_chamber_and_more.py  0002_policycampaign_image.py  0002_policycampaign_image_and_more.py  0003_alter_policycampaign_active_and_more.py  0003_alter_policycampaign_description_and_more.py  0003_rename_slug_to_name.py  0003_update_campaign_image_to_foreignkey.py  0004_add_explicit_table_names.py  0004_alter_policycampaign_description_and_more.py
backend/coalition/campaigns/models/: __init__.py  bill.py  policy_campaign.py
backend/coalition/campaigns/tests/: test_admin.py  test_models.py
backend/coalition/content/: __init__.py  admin.py  apps.py  html_sanitizer.py  theme_service.py  validators.py  views.py
backend/coalition/content/admin/: __init__.py  content_block.py  homepage.py  image.py  theme.py  video.py
backend/coalition/content/migrations/: 0001_initial.py  0002_add_image_model.py  0002_clean_image_fields.py  0003_alter_contentblock_content_and_more.py  0003_remove_contentblock_homepage_and_more.py  __init__.py  (+7 more)
backend/coalition/core/: admin.py  database_rate_limiter.py  email_backend.py  html_sanitizer.py  models.py  rate_limiter.py  secrets.py  settings.py  sitemap.py  storage.py  tests_csrf_config.py  tests_html_sanitization.py  theme_service.py  urls.py  views.py
backend/coalition/endorsements/: admin.py  email_service.py  models.py  spam_prevention.py  tests.py  views.py
backend/coalition/fixtures/: regions.json
backend/coalition/legal/: admin.py  apps.py  models.py  tests.py
backend/coalition/legislators/: admin.py  models.py  tests.py
backend/coalition/middleware/: site_protection.py
backend/coalition/regions/: admin.py  constants.py  models.py
backend/coalition/stakeholders/: admin.py  constants.py  models.py  services.py  spatial.py  tests.py  validators.py
backend/docker/app/: Dockerfile.lambda
backend/docker/geolambda/: Dockerfile
backend/docs/: conf.py  index.rst
backend/docs/_static/: custom.css
backend/sample_data/: README.md  example_legal_privacy_policy.json  example_legal_terms_of_use.json  fixtures.json
backend/scripts/: build-docker.sh  build-geolambda-local.sh  configure-zappa.py  configure_zappa.py  create_test_data.py
backend/scripts/tests/: test_configure_zappa.py
backend/templates/: index.html
backend/templates/emails/: admin_endorsement_notification.html  admin_endorsement_notification.txt  endorsement_approved.html  endorsement_approved.txt  endorsement_verification.html  endorsement_verification.txt
(+735 files in other folders)
